fixed: overflow hidden for long values in object- and profit calc

--- a/develop/blocks/object-calc/object-calc.scss
+++ b/develop/blocks/object-calc/object-calc.scss
@@ -217,6 +217,8 @@
         font-weight: 600;
         white-space: nowrap;
 
+        overflow: hidden;
+
         .value {
             outline-offset: 2px;
         }
