--- a/develop/blocks/profit-object/profit-object.scss
+++ b/develop/blocks/profit-object/profit-object.scss
@@ -62,6 +62,9 @@
 
         font-size: 28px;
         font-weight: 600;
+        white-space: nowrap;
+
+        overflow: hidden;
     }
 
     &__data-label {
